fix issues with feature title/img on small screen

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ rect {
 
 .feature-image img {
   width: 100%;
-  height: 100%;
+  height: 400px;
   object-fit: cover;
 }
 
@@ -337,13 +337,19 @@ footer li {
     height: 220px;
   }
 
+  .feature-image img {
+    height: 220px;
+  }
+
   .feature-text {
     color: white;
     margin: 1rem;
   }
 
   .feature-text h1 {
-    font-size: 18px;
+    font-size: 16px;
+    margin-bottom: 0px;
+    margin-top: 0px;
   }
 
   .feature-text p {
@@ -351,7 +357,7 @@ footer li {
   }
 
   .feature-text .author {
-    font-size: 16px;
+    font-size: 14px;
   }
 
   /* grid */
